[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytb"
version = "0.1"
dependencies = [
    "numpy>=1.23.0,<=1.27.0",
    "pandas>=2.0.1",
    "matplotlib>=3.7.1",
    "scipy>=1.7.3",
    "seaborn>=0.12.2",
]
description = "0D DSMC general plasma code"
readme = "README.md"
requires-python = ">=3.7.16"

[tool.setuptools.package-data]
"pytb.data" = ["*.txt", "*.csv"]
"pytb.data.CCC" = ["*.txt", "*.csv"]
"pytb.thunderboltz" = ["*.cpp", "*.h"]
