[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thunderboltz"
version = "0.1"
dependencies = [
    "numpy>=1.23.0,<=1.27.0",
    "pandas>=2.0.1",
    "matplotlib>=3.7.1",
    "scipy>=1.7.3",
    "seaborn>=0.12.2",
]
description = "A 0D Direct Simulation Monte-Carlo code for the calculation of transport coefficients and 0D gas modeling."
readme = "README.md"
requires-python = ">=3.7.16"

[tool.setuptools.package-data]
"thunderboltz.data" = ["*.txt", "*.csv"]
"thunderboltz.data.CCC" = ["*.txt", "*.csv"]
"thunderboltz.cpp" = ["*.cpp", "*.h"]
