[tool.poetry]
name = "thunderboltz"
version = "0.4.1"
description = "A 0D Direct Simulation Monte-Carlo code for the calculation of transport coefficients and 0D gas modeling."
authors = ["Ryan Park <rmpark@umich.edu>",
           "Brett Scheiner <brett.s.scheiner@gmail.com>",
           "Mark Zammit <mzammit@lanl.gov>",
]
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
include = [
    "src/thunderboltz/cpp/{*.cpp,*.h}",
    "src/thunderboltz/data/{*.txt,*.csv}",
    "src/thunderboltz/data/CCC/{*.txt,*.csv}",
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.23.0,<=1.27.0"
pandas = ">=2.0.1"
matplotlib = ">=3.7.1"
scipy = {version=">=1.7.3", python=">=3.8,<3.13"}
seaborn = ">=0.12.2"

[tool.poetry.group.dev.dependencies]
sphinx = {version = "^7.2.6", python = ">=3.9"}
sphinx-autoapi = "^3.0.0"
sphinxcontrib-napoleon = "^0.7"
furo = "^2023.9.10"
python-semantic-release = "^8.3.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sphinx-rtd-theme = "^1.3.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
changlog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = false

[tool.setuptools_scm]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
